Power up functionality done, animations, tweens, added the tween engine of course, etc.

--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ project(":android") {
         compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-controllers-android:$gdxVersion"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
+        compile fileTree(dir: '../libs', include: '*.jar')
     }
 }
 
@@ -93,6 +94,7 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
+        compile fileTree(dir: '../libs', include: '*.jar')
     }
 }
 
